fix minor grammar errors

--- a/ex1.tex
+++ b/ex1.tex
@@ -61,7 +61,7 @@ following line to the top of \file{ex1.c} and recompile:
 #include <stdio.h>
 \end{lstlisting}
 
-Now do the make again with like you just did and you'll see the warning go away.
+Now do the make again like you just did and you'll see the warning go away.
 
 \section{Extra Credit}
 
