--- a/ex5.tex
+++ b/ex5.tex
@@ -1,4 +1,8 @@
-\chapter{Exercise 5}
+\chapter{Exercise 5: The Structure Of A C Program}
+
+You know how to use \ident{printf} and have a couple basic tools
+at your disposal, so let's break down a simple C program line-by-line
+so you know how one is structured.
 
 
 \section{What You Should See}
