Simple typo correction.

--- a/ex0.tex
+++ b/ex0.tex
@@ -122,7 +122,7 @@ easy to use, since it was created mostly for piano and composers.
 
 Guitar however is a weird instrument that doesn't really work with notation,
 so guitarists have an alternative notation called "tablature".  What tablature
-does is, rather than tell you the not to play, it tells you the fret
+does is, rather than tell you the note to play, it tells you the fret
 and string you should play at that time.  You could learn whole songs without
 ever knowing about a single thing you're playing.  Many people do it this way,
 but if you want to know \emph{what} you're playing, then tablature is pointless.
