Title is too long on Ex4.

--- a/ex4.tex
+++ b/ex4.tex
@@ -1,4 +1,4 @@
-\chapter{Exercise 4: Introducing Valgrind, Your New Best Friend}
+\chapter{Exercise 4: Introducing Valgrind}
 
 It's time to learn about another tool you will live and die by as you
 learn C called \ident{Valgrind}.  I'm introducing \ident{Valgrind} to you
