HTML tidy was butchering the html.

--- a/preamble.tex
+++ b/preamble.tex
@@ -29,7 +29,8 @@
 upquote=true,
 breaklines=true,
 postbreak=\raisebox{0ex}[0ex][0ex]{\ensuremath{\hookrightarrow}},
-breakatwhitespace=true
+breakatwhitespace=true,
+numbers=left
 }
 
 % taken from http://mintaka.sdsu.edu/GF/bibliog/latex/floats.html
