Got ex5.c code down.

--- a/ex5.tex
+++ b/ex5.tex
@@ -4,10 +4,11 @@ You know how to use \ident{printf} and have a couple basic tools
 at your disposal, so let's break down a simple C program line-by-line
 so you know how one is structured.
 
-\begin{code}{ex4.c}
+\begin{code}{ex5.c}
 << d['code/ex5.c|pyg|l'] >>
 \end{code}
 
+.. will need to get line numbers working to continue...
 
 \section{What You Should See}
 
