--- a/ex0.tex
+++ b/ex0.tex
@@ -115,33 +115,36 @@ a particular IDE, but for learning to code C (and many other languages) they
 are pointless.
 
 \begin{aside}{IDEs and Guitar Tablature}
+
 If you've played guitar then you know what tablature is, but for everyone else
-let me explain.  In music there's an established notation called the "staff notation".  It's a generic, very old, and universal way to write down what someone
-should play on an instrument.  If you play piano this notation is fairly 
-easy to use, since it was created mostly for piano and composers.
+let me explain.  In music there's an established notation called the "staff
+notation".  It's a generic, very old, and universal way to write down what
+someone should play on an instrument.  If you play piano this notation is
+fairly easy to use, since it was created mostly for piano and composers.
 
-Guitar however is a weird instrument that doesn't really work with notation,
-so guitarists have an alternative notation called "tablature".  What tablature
-does is, rather than tell you the note to play, it tells you the fret
-and string you should play at that time.  You could learn whole songs without
-ever knowing about a single thing you're playing.  Many people do it this way,
-but if you want to know \emph{what} you're playing, then tablature is pointless.
+Guitar however is a weird instrument that doesn't really work with notation, so
+guitarists have an alternative notation called "tablature".  What tablature
+does is, rather than tell you the note to play, it tells you the fret and
+string you should play at that time.  You could learn whole songs without ever
+knowing about a single thing you're playing.  Many people do it this way, but
+if you want to know \emph{what} you're playing, then tablature is pointless.
 
-It may be easier, but traditional notation tells you how to play the \emph{music} rather than just how to play the guitar.  With traditional notation I can
-walk over to a piano and play the same song.  I can play it on a bass.  I can
-put it into a computer and design whole scores around it.  With tablature I can
-just play it on a guitar.
+It may be easier, but traditional notation tells you how to play the
+\emph{music} rather than just how to play the guitar.  With traditional
+notation I can walk over to a piano and play the same song.  I can play it on a
+bass.  I can put it into a computer and design whole scores around it.  With
+tablature I can just play it on a guitar.
 
 IDEs are like tablature.  Sure, you can code pretty quickly, but you can only
-code in that one language on that one platform.  This is why companies love 
+code in that one language on that one platform.  This is why companies love
 selling them to you.  They know you're lazy, and since it only works on their
 platform they've got you locked in because you are lazy.
 
 The way you break the cycle is you suck it up and finally learn to code without
-an IDE.  A plain editor, or a programmer's editor like Vim or Emacs, makes
-you work with the code.  It's a little harder, but the end result is you can
-work with \emph{any} code, on any computer, in any language, and you
-know what's going on.
+an IDE.  A plain editor, or a programmer's editor like Vim or Emacs, makes you
+work with the code.  It's a little harder, but the end result is you can work
+with \emph{any} code, on any computer, in any language, and you know what's
+going on.
 \end{aside}
 
 
