--- a/ex4.tex
+++ b/ex4.tex
@@ -75,33 +75,33 @@ directly, we'll run it with \ident{Valgrind} (see Source: "Building and running 
 
 This one is huge because \ident{Valgrind} is telling you exactly where
 every problem in your program.  Starting at the top here's whare you're
-reading:
+reading, line by line (line numbers are on the left so you can follow):
 
-\begin{enumerate}
-\item You do the usual \verb|make ex4| and that builds it. Make sure the \ident{cc} command
+\begin{description}
+\item[1] You do the usual \verb|make ex4| and that builds it. Make sure the \ident{cc} command
     you see is the same and has the \verb|-g| option or your valgrind output won't
     have line numbers.
-\item Notice that the compiler is also yelling at you about this source file and it
+\item[2-6] Notice that the compiler is also yelling at you about this source file and it
     warns you that you have "too few arguments for format".  That's where you 
     forgot to include the \ident{age} variable.
-\item Then you run your program using \verb|valgrind ./ex4|.
-\item Then \ident{valgrind} goes crazy and yells at you for:
-    \begin{enumerate}
-        \item On line \verb|main (ex4.c:11)| (read as "in the main function in
+\item[7] Then you run your program using \verb|valgrind ./ex4|.
+\item[8] Then \ident{valgrind} goes crazy and yells at you for:
+    \begin{description}
+        \item[14-18] On line \verb|main (ex4.c:11)| (read as "in the main function in
             file ex4.c at line 11) you have "Use of uninitialised value of size 8".
             You find this by looking at the error, then you see what's called a "stack trace"
             right under that.  The line to look at first (ex4.c:11) is the bottom one, 
             and if you don't see what's going wrong then you go up, so you'd try
-            printf.c:35.  Typically it's the bottom most line that matters.
-        \item Next error is yet another one on line ex4.c:11 in the main function. Valgrind
+            printf.c:35.  Typically it's the bottom most line that matters (in this case, on line 18).
+        \item[20-24] Next error is yet another one on line ex4.c:11 in the main function. Valgrind
             hates this line.  This error says that some kind of if-statement or while-loop
             happened that was based on an uninitialized variable, in this case height.
-        \item The remaining errors are more of the same because the variable keeps getting
+        \item[25-35] The remaining errors are more of the same because the variable keeps getting
         used.
-    \end{enumerate}
-\item Finally the program exits and \ident{Valgrind} tells you a summary of how bad
+    \end{description}
+\item[37-46] Finally the program exits and \ident{Valgrind} tells you a summary of how bad
     your program is.
-\end{enumerate}
+\end{description}
 
 That is quite a lot of information to take in, but here's how you deal with it:
 
