--- a/ex5.tex
+++ b/ex5.tex
@@ -11,14 +11,15 @@ going to work with these concepts.
 << d['code/ex5.c|pyg|l'] >>
 \end{code}
 
-Type this code in, make it run so you know it's correct.
+Type this code in, make it run, and make sure you get \emph{no Valgrind
+errors}.  You probably won't but get in the habit of checking it. 
 
 \section{What You Should See}
 
 This has pretty boring output, but the point of this exercise is
 to analyze the code:
 
-\begin{code}{ex5.c}
+\begin{code}{ex5 output}
 \begin{lstlisting}
 << d['code/ex5.out|dexy'] >>
 \end{lstlisting}
