Broken text in ex6

--- a/ex6.tex
+++ b/ex6.tex
@@ -37,7 +37,7 @@ of how they match up:
     \verb|%f|.
 \item[Character] Declared with \ident{char}, written with a \verb|'| (single-quote)
     character around the char, and then printed with \verb|%c|.
-\item[String (Array of Characters)] Declared with \ident[char name\[\]], 
+\item[String (Array of Characters)] Declared with \verb|char name[]|, 
     written with \verb|"| characters, and printed with \verb|%s|.
 \end{description}
 
