--- a/ex0.tex
+++ b/ex0.tex
@@ -129,7 +129,7 @@ string you should play at that time.  You could learn whole songs without ever
 knowing about a single thing you're playing.  Many people do it this way, but
 if you want to know \emph{what} you're playing, then tablature is pointless.
 
-It may be easier, but traditional notation tells you how to play the
+It may be harder than tablature, but traditional notation tells you how to play the
 \emph{music} rather than just how to play the guitar.  With traditional
 notation I can walk over to a piano and play the same song.  I can play it on a
 bass.  I can put it into a computer and design whole scores around it.  With
