--- a/ex5.tex
+++ b/ex5.tex
@@ -63,7 +63,7 @@ exercises to understand each part better:
 \item[ex5.c:11] A return from the main function, which gives the OS your exit
     value.  You may not be familiar with how Unix software uses return
     codes, so we'll cover that as well.
-\item[ex5.c:12] Finally, we end the main function with a closing brace \verb|{|
+\item[ex5.c:12] Finally, we end the main function with a closing brace \verb|}|
     character and that's the end of the program.
 \end{description}
 
