Even better cleaning.

--- a/ex4.tex
+++ b/ex4.tex
@@ -39,6 +39,11 @@ and then running \verb|port install valgrind|.  MacPorts is also useful for
 getting other software packages we might need later, so go ahead and install 
 it anyway.
 
+\begin{aside}{WARNING: Valgrind Broken On OSX Lion Right Now}
+As of Sep 4, 2011 there's this \href{http://bit.ly/qRxc6s}{bug in Valgrind}
+on OSX Lion.  It might take a little while for them to fix it, so be patient.
+\end{aside}
+
 \section{Using Valgrind}
 
 Using \ident{Valgrind} is easy, you just run \verb|valgrind theprogram| and it
