One little EC on char vs. int.

--- a/ex7.tex
+++ b/ex7.tex
@@ -72,5 +72,7 @@ breaking attempts.
 \item Change \ident{long} to \ident{unsigned long} and try to find 
     the number that makes that one too big.
 \item Go search online to find out what \ident{unsigned} does.
+\item Try to explain to yourself (before I do in the next exercise)
+    why you can multiple a \ident{char} and an \ident{int}.
 \end{enumerate}
 
