--- a/commands.tex
+++ b/commands.tex
@@ -38,7 +38,7 @@
 \floatstyle{ruled}
 \newfloat{note}{htpb}{lon}
 \floatname{note}{Note}
-\newfloat{source}{htpb}{los}
+\newfloat{source}{H}{los}
 \floatname{source}{Source}
 \newcommand{\listofnotes}{\listof{note}{List Of Notes}}
 \newcommand{\listofsource}{\listof{source}{List Of Source}}
