Unclear sentence in ex5.

--- a/ex5.tex
+++ b/ex5.tex
@@ -80,7 +80,7 @@ won't know everything, but you can probably guess before we continue.
     if you get it right.
 \item Go back to the source code from the previous exercises and
     do a similar break-down to see if you're getting it.  Write down
-    you don't actually know and can't explain to yourself.
+    what you don't know and can't explain to yourself.
 \end{enumerate}
 
 
