--- a/ex9.tex
+++ b/ex9.tex
@@ -5,7 +5,7 @@ arrays and how they map to strings.  In this exercise we'll more completely
 show the similarity between arrays and strings, and get into more about
 memory layouts.
 
-This exercise shows you that C stores it's strings simply as an array
+This exercise shows you that C stores its strings simply as an array
 of bytes, terminated with the \verb|'\0'| (nul) byte.  You probably clued
 into this in the last exercise since we did it manually.  Here's
 how we do it in another way to make it even more clear by comparing it
