--- a/ex9.tex
+++ b/ex9.tex
@@ -17,7 +17,7 @@ to an array of numbers:
 
 In this code, we setup some arrays the tedious way, by assigning a value
 to each element.  In \ident{numbers} we are setting up numbers, but in
-name we're actually building a string manually.
+\ident{name} we're actually building a string manually.
 
 \section{What You Should See}
 
