Updated wording to be more correct.

--- a/ex8.tex
+++ b/ex8.tex
@@ -36,7 +36,8 @@ that contain those numbers.  When it gets to \verb|char name[] = "Zed";|
 it's doing the same thing, except it's creating an array of 3 chars and
 assigning that to \ident{name}.  The final array we make is \ident{full\_name},
 but we use the annoying syntax of spelling it out, one character at a time.
-To C, \ident{name} and \ident{full\_name} are identical.
+To C, \ident{name} and \ident{full\_name} are identical methods of creating 
+a char array.
 
 The rest of the file, we're using a keyword called \ident{sizeof} to
 ask C how big things are in \emph{bytes}.  C is all about the size
