Use for-loop consistently.

--- a/ex10.tex
+++ b/ex10.tex
@@ -15,7 +15,7 @@ arguments you pass it:
 << d['code/ex10.c|pyg|l'] >>
 \end{code}
 
-The format of a \ident{for-statement} is this:
+The format of a \ident{for-loop} is this:
 
 \begin{Verbatim}
     for(INITIALIZER; TEST; INCREMENTER) {
